<resources>
    <string name="app_name">Project Management</string>
    <string name="project_management">Project Management</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="Intro_Description">Collaborate and Plan Across Multiple Devices on Project Management\'s Minimalistic Interface</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="please_wait">Please wait</string>
    <string name="description">Description</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="img">img</string>
    <string name="update">UPDATE</string>
    <string name="mobile">Mobile</string>
    <string name="board_name">Board Name</string>
    <string name="create">CREATE</string>
    <string name="action_button">Action Button</string>
    <string name="no_boards_available">No Boards Available</string>
    <string name="contentdescription">contentDescription</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="user_name">User name</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>

    <string name="delete_card">Delete Card</string>
    <string name="image_content_description">Image Content Description</string>
    <string name="default_notification_channel_id">Project Management Notification Channel Id</string>
</resources>