<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:background="@drawable/intro_background"
    >

    <TextView
        android:id="@+id/tv_Intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_management"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />

    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/iv_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_task_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_Intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_Intro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/primary_text_color"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/iv_intro"

        />

    <TextView
        android:id="@+id/tv_Intro3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Intro_Description"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/primary_text_color"
        app:layout_constraintTop_toBottomOf="@+id/tv_Intro2"
        />


    <TextView
        android:id="@+id/Sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button_rounded"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/tv_Intro3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/Sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_button_border"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/Sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorAccent"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>