<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activtities.SignUpActivity"
    android:background="@drawable/ic_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_signup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/sign_in"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_signup"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="Enter Your Email and Password to Login With Project Management."
        tools:ignore="HardcodedText"
        android:textSize="17sp"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:id="@+id/cv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_email_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:minHeight="48dp"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/sign_in_activity_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints,TextContrastCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>